fix: udated not-found.js and related css to utilize light/dark mode theme

--- a/src/app/global-styles.css
+++ b/src/app/global-styles.css
@@ -206,13 +206,7 @@ section {
   margin-bottom: 2rem;
 }
 
-#notFound {
-  background-color: var(--color-text);
-  color: var(--dark);
-}
-
 #notFound a {
-  color: var(--dark);
   font-weight: 700;
   display: inline-block;
   text-decoration: none;
